# torch-cpp-float-benchmark

./: .gitignore  CMakeLists.txt  README.md  main.cpp
scripts/: pre_setup.sh  run_likwid.sh
source/network/: Net.hpp
source/network/old/: NetOld.hpp
